--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
 <!-- Awal Navbar -->
-    <nav class="navbar navbar-expand-md navbar-dark bg-primary shadow-lg fixed-top navbarset">
+    <nav class="navbar navbar-expand-md navbar-dark bg-primary shadow-lg fixed-top">
     <div class="container">
     <img src="img/facil/brand1.png" class="brand">   
         <a href="#" class="navbar-brand me-auto ms-2 fw-bold">  E-FACIL </a>
@@ -97,7 +97,7 @@
                     <img src="img/gambar1.png" class="card-img-top const1 " alt="...">
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Contoh Produk 1</h5>
-                        <p class="text-danger fw-bold"> Harga : Ro. 15.000 (Minsal)</p>
+                        <p class="text-danger fw-bold"> Harga : Rp. 15.000 (Minsal)</p>
                         <p class="card-text">Ini adalah contoh Produk dari Facil Store</p>
                         <a href="review.html" class="btn btn-primary" id="tb1">Lihat Revie</a>
                     </div>
@@ -156,16 +156,16 @@
                  <form action="" name="submit-to-google-sheet" >
                     <label for="nama" class="form-label">Nama Lengkap</label>
                     <input type="text" id="nama" name="nama" class="form-control mb-2" aria-describedby="passwordHelpBlock" required autocomplete="off" data-aos="fade-up"
-                    data-aos-anchor-placement="bottom-bottom">
+                    data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">
                     <label for="alamat" class="form-label">Alamat Lengkap</label>
                     <input type="text" name="alamat" id="Alamat" class="form-control mb-2" aria-describedby="passwordHelpBlock" required autocomplete="off" data-aos="fade-up"
-                    data-aos-anchor-placement="bottom-bottom">
-                    <label for="hp" class="form-label">No. Handphone</label>
+                    data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">
+                    <label for="hp" class="form-label" >No. Handphone</label>
                     <input type="telp" name="handphone" id="hp" class="form-control mb-2" aria-describedby="passwordHelpBlock" required autocomplete="off" maxlength="12" data-aos="fade-up"
-                    data-aos-anchor-placement="bottom-bottom">
+                    data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">
                     <label for="produk" class="form-label">Produk Yang Dipilih</label>
                     <select class="form-select mb-2 userproduk" aria-label="Default select example" name="produk_dipilih" id="produk" data-aos="fade-up"
-                    data-aos-anchor-placement="bottom-bottom">
+                    data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">
                         <option selected value="0">--Pilih Produk--</option>
                         <option class="select1" id="" value="Pas Bunga Minimalis">Pas Bunga Minimalis</option>
                         <option class="select2" value="Produk 1">Produk 1</option>
@@ -173,15 +173,15 @@
                       </select>
                     <label for="jumlah" class="form-label">Jumlah Produk</label>
                     <input type="number" step="1" placeholder="0" id="jumlahProduk" min="0" name="jml_produk" class="form-control mb-3" aria-describedby="passwordHelpBlock" required autocomplete="off" data-aos="fade-up"
-                    data-aos-anchor-placement="bottom-bottom">
+                    data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">
                     <label for="total" class="form-label">Total Harga</label>
                     <input type="text" id="total" name="total_harga" class="form-control mb-3" readonly aria-describedby="passwordHelpBlock" required autocomplete="off" value="0" data-aos="fade-up"
-                    data-aos-anchor-placement="bottom-bottom" >
+                    data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000" >
                     <label for="saran" class="form-label">Saran</label>
                     <textarea class="form-control mb-3" name="saran" placeholder="Masukan Saran Anda..." id="saran" style="height: 100px" data-aos="fade-up"
                     data-aos-anchor-placement="bottom-bottom"></textarea>
                     <button type="submit" class="btn btn-primary btnpesan" data-aos="fade-up"
-                    data-aos-anchor-placement="bottom-bottom">Pesan!</button>
+                    data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">Pesan!</button>
                     <button class="btn btn-primary btnloading d-none" type="button" >
                         <span class="spinner-border spinner-border-sm " role="status" aria-hidden="true"></span>
                         Loading...
@@ -193,7 +193,7 @@
             
         </div>
     </div>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#00bfff" fill-opacity="1" d="M0,64L48,69.3C96,75,192,85,288,101.3C384,117,480,139,576,160C672,181,768,203,864,186.7C960,171,1056,117,1152,90.7C1248,64,1344,64,1392,64L1440,64L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#40e0d0" fill-opacity="1" d="M0,64L48,69.3C96,75,192,85,288,101.3C384,117,480,139,576,160C672,181,768,203,864,186.7C960,171,1056,117,1152,90.7C1248,64,1344,64,1392,64L1440,64L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
     
 </section>
 
