lengaki fitur animasi

--- a/review.html
+++ b/review.html
@@ -24,7 +24,7 @@
         <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarScroll">
-        <ul class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll fw-bold" style="--bs-scroll-height: 100px;">
+        <ul class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll fw-bold">
             <li class="nav-item">
             <a class="nav-link " aria-current="page" href="index.html"><i class="bi bi-house-fill"></i> Home</a>
             </li>
@@ -72,7 +72,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-md-4 mb-3">
+                <div class="col-md-4 mb-3" data-aos="fade-up">
                     <div class="card">
                         <iframe width="100%"
                         src="https://www.youtube.com/embed/tgbNymZ7vqY">
@@ -82,7 +82,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-md-4 mb-3">
+                <div class="col-md-4 mb-3" data-aos="fade-up">
                     <div class="card">
                         <iframe width="100%"
                         src="https://www.youtube.com/embed/tgbNymZ7vqY">
@@ -92,7 +92,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-md-4 mb-3">
+                <div class="col-md-4 mb-3" data-aos="fade-up">
                     <div class="card">
                         <iframe width="100%"
                         src="https://www.youtube.com/embed/tgbNymZ7vqY">
@@ -102,7 +102,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-md-4 mb-3">
+                <div class="col-md-4 mb-3" data-aos="fade-up">
                     <div class="card">
                         <iframe width="100%"
                         src="https://www.youtube.com/embed/tgbNymZ7vqY">
@@ -112,7 +112,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-md-4 mb-3">
+                <div class="col-md-4 mb-3" data-aos="fade-up">
                     <div class="card">
                         <iframe width="100%"
                         src="https://www.youtube.com/embed/tgbNymZ7vqY">
@@ -122,7 +122,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-md-4 mb-3">
+                <div class="col-md-4 mb-3" data-aos="fade-up">
                     <div class="card">
                         <iframe width="100%"
                         src="https://www.youtube.com/embed/tgbNymZ7vqY">
@@ -132,7 +132,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-md-4 mb-3">
+                <div class="col-md-4 mb-3" data-aos="fade-up">
                     <div class="card">
                         <iframe width="100%"
                         src="https://www.youtube.com/embed/tgbNymZ7vqY">
@@ -162,9 +162,12 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <p> Created By <i class="bi bi-facebook"></i> <i class="bi bi-instagram"> </i><i class="bi bi-youtube"></i><a href="#">  IT FACIL STORE   </a></p> 
-                <p>Mahasiswa Politekni Negeri Sriwijaya (POLSRI) Tahun 2021/2022</p>
-                <p>Jl. Kapten Anwar Sastro, Sungai Pangeran, Kec. Ilir Tim. I, Kota Palembang, Sumatera Selatan 30121</p>
+                <p data-aos="fade-up"
+                data-aos-anchor-placement="bottom-bottom"> Created By <i class="bi bi-facebook"></i> <i class="bi bi-instagram"> </i><i class="bi bi-youtube"></i><a href="#">  IT FACIL STORE   </a></p> 
+                <p data-aos="fade-up"
+                data-aos-anchor-placement="bottom-bottom">Mahasiswa Politekni Negeri Sriwijaya (POLSRI) Tahun 2021/2022</p>
+                <p data-aos="fade-up"
+                data-aos-anchor-placement="bottom-bottom">Jl. Kapten Anwar Sastro, Sungai Pangeran, Kec. Ilir Tim. I, Kota Palembang, Sumatera Selatan 30121</p>
             </div>
         </div>
     </div>
@@ -182,6 +185,7 @@
 
  
     <script src="bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
     </script>
