--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarScroll">
-        <ul class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll fw-bold" style="--bs-scroll-height: 100px;">
+        <ul class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll fw-bold">
             <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="index.html"><i class="bi bi-house-fill"></i> Home</a>
             </li>
@@ -105,11 +105,11 @@
             </div>
             <div class="col-md-4 mb-3 ">
                 <div class="card " data-aos="zoom-in" data-aos-duration="1250">
-                    <img src="img/gambar2.png" class="card-img-top const2" alt="...">
+                    <img src="img/gambar8.jpeg" class="card-img-top const2" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Pas Bunga Minimalis</h5>
+                        <h5 class="card-title">DIY Edelweis Flower</h5>
                         <p class="text-danger fw-bold" >Harga : Rp. 20.000</p>
-                        <p class="card-text">Sebuah Pas Bunga Minimalis dan Harga Ekonomis, Ramah Lingkungan dan Pastinya Membuat Ruangan Anda Menjadi Lebih Fresh</p>
+                        <p class="card-text">Sebuah Kreasi Kembang Plastik yang Harga Ekonomis, Ramah Lingkungan dan Pastinya Membuat Ruangan Anda Menjadi Lebih Fresh</p>
                         <a href="review.html" class="btn btn-primary" id="tb2">Lihat Review</a>
                     </div>
                 </div>
@@ -167,7 +167,7 @@
                     <select class="form-select mb-2 userproduk" aria-label="Default select example" name="produk_dipilih" id="produk" data-aos="fade-up"
                     data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">
                         <option selected value="0">--Pilih Produk--</option>
-                        <option class="select1" id="" value="Pas Bunga Minimalis">Pas Bunga Minimalis</option>
+                        <option class="select1" id="" value="Pas Bunga Minimalis">DIY Edelweis Flower</option>
                         <option class="select2" value="Produk 1">Produk 1</option>
                         <option class="select3" value="Produk 2">Produk 2</option>
                       </select>
