--- a/informasi.html
+++ b/informasi.html
@@ -24,7 +24,7 @@
         <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarScroll">
-        <ul class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll fw-bold" style="--bs-scroll-height: 100px;">
+        <ul class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll fw-bold">
             <li class="nav-item">
             <a class="nav-link " aria-current="page" href="index.html"><i class="bi bi-house-fill"></i> Home</a>
             </li>
@@ -47,11 +47,11 @@
         <div class="container">
             <div class="row mb-3">
                 <div class="col">
-                    <h1 class="fw-bold">Data Penjualan Facil Store</h1>
+                    <h1 class="fw-bold" data-aos="flip-left" data-aos-duration="1500">Data Penjualan Facil Store</h1>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 text-center">
+                <div class="col-md-4 text-center" data-aos="fade-up">
                     <div class="card text-white bg-primary mb-3 text-center">
                         <div class="card-header">Nama Produk</div>
                         <div class="card-body">
@@ -61,9 +61,9 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4" data-aos="fade-up">
                     <div class="card text-white bg-primary mb-3">
-                        <div class="card-header">Pas Bunga Minimalis</div>
+                        <div class="card-header">DIY Edelweis Flower</div>
                         <div class="card-body">
                             <img src="img/gambar2.png" class="dataproduk mb-3" alt="">
                           <h5 class="card-title text-warning fw-bold">Stok : 70 Buah</h5>
@@ -71,7 +71,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4" data-aos="fade-up">
                     <div class="card text-white bg-primary mb-3 justify-content-center">
                         <div class="card-header">Nama Produk</div>
                         <div class="card-body">
@@ -99,9 +99,12 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <p> Created By <i class="bi bi-facebook"></i> <i class="bi bi-instagram"> </i><i class="bi bi-youtube"></i><a href="#">  IT FACIL STORE   </a></p> 
-                <p>Mahasiswa Politekni Negeri Sriwijaya (POLSRI) Tahun 2021/2022</p>
-                <p>Jl. Kapten Anwar Sastro, Sungai Pangeran, Kec. Ilir Tim. I, Kota Palembang, Sumatera Selatan 30121</p>
+                <p data-aos="fade-up"
+                data-aos-anchor-placement="bottom-bottom"> Created By <i class="bi bi-facebook"></i> <i class="bi bi-instagram"> </i><i class="bi bi-youtube"></i><a href="#">  IT FACIL STORE   </a></p> 
+                <p data-aos="fade-up"
+                data-aos-anchor-placement="bottom-bottom">Mahasiswa Politekni Negeri Sriwijaya (POLSRI) Tahun 2021/2022</p>
+                <p data-aos="fade-up"
+                data-aos-anchor-placement="bottom-bottom">Jl. Kapten Anwar Sastro, Sungai Pangeran, Kec. Ilir Tim. I, Kota Palembang, Sumatera Selatan 30121</p>
             </div>
         </div>
     </div>
@@ -119,11 +122,12 @@
 
  
     <script src="bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
       </script>
 
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
 
   </body>
 </html>
