--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <div class="card-body">
                         <h5 class="card-title">DIY Edelweis Flower</h5>
                         <p class="text-danger fw-bold" >Harga : Rp. 20.000</p>
-                        <p class="card-text">Sebuah Kreasi Kembang Plastik yang Harga Ekonomis, Ramah Lingkungan dan Pastinya Membuat Ruangan Anda Menjadi Lebih Fresh</p>
+                        <p class="card-text">Sebuah Kreasi Kembang Plastik yang Ekonomis, Ramah Lingkungan dan Pastinya Membuat Ruangan Anda Menjadi Lebih Fresh</p>
                         <a href="review.html" class="btn btn-primary" id="tb2">Lihat Review</a>
                     </div>
                 </div>
