--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
                     <p class="fw-bold">Rehansyah</p>
                 </div>
                 <div class="col-md-4" data-aos="fade-up">
-                    <img src="img/facil/gambar14.jpg" class="aboutdata">
+                    <img src="img/facil/gambar14.jpeg" class="aboutdata">
                     <p class="fw-bold">Bella Rahma Sary</p>
                 </div>
                 <div class="col-md-4" data-aos="fade-up">
@@ -172,6 +172,8 @@
                 data-aos-anchor-placement="bottom-bottom">Mahasiswa Politekni Negeri Sriwijaya (POLSRI) Tahun 2021/2022</p>
                 <p data-aos="fade-up"
                 data-aos-anchor-placement="bottom-bottom">Jl. Kapten Anwar Sastro, Sungai Pangeran, Kec. Ilir Tim. I, Kota Palembang, Sumatera Selatan 30121</p>
+                <p data-aos="fade-up"
+                data-aos-anchor-placement="bottom-bottom"><i class="bi bi-info-circle-fill text-danger "></i>   Jika Aplikasi Kurang Merespon Beralih Ke Websitenya <a href="https://irpansyah2m1d.github.io/E-Facil.github.io/" target="_blank">Facil Store</a></p>
             </div>
         </div>
     </div>
