--- a/review.html
+++ b/review.html
@@ -47,22 +47,36 @@
         <div class="container text-center">
             <div class="row">
                 <div class="col">
-                    <h1 class="fw-bold mb-4">Daftar Review Produk</h1>
+                    <h1 class="fw-bold mb-4"  data-aos="flip-left" data-aos-duration="1500" >Daftar Review Produk</h1>
                 </div>
                 
             </div>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4" data-aos="fade-up">
                     <div class="card mb-3">
-                        <iframe width="100%"
-                        src="https://www.youtube.com/embed/tgbNymZ7vqY">
-                        </iframe>
+                        <img src="img/review/review2.jpeg" width="100%" height="300px">
                         <div class="card-body">
                           <p class="card-text">Produknya sangat bagus dan nyaman di gunakan serta murah dan ramah lingkungan</p>
                         </div>
                       </div>
                 </div>
-                <div class="col-md-4 mb-3">
+                <div class="col-md-4 mb-3" data-aos="fade-up">
+                    <div class="card">
+                        <img src="img/review/review3.jpeg" width="100%" height="300px">
+                        <div class="card-body">
+                          <p class="card-text">Senang Bisa Belanja Di Toko Ini Transaksi Mudah Aman dan Nggak Ribet. Next Time Mau Belanja Lagi hehehhh FACIL STORE emang MANTUL!!!</p>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-md-4 mb-3" data-aos="fade-up">
+                    <div class="card">
+                        <img src="img/review/review1.jpeg" width="100%" height="300px">
+                        <div class="card-body">
+                          <p class="card-text">Respon Cepat Penggunaan Simple dan Produk nya Bagus Banget. Rekomendasi banget ini mah dan yang pastinya aman dan fitur-fiturnya bikin fresh saat menggunakannya.</p>
+                        </div>
+                      </div>
+                </div>
+                <!-- <div class="col-md-4 mb-3" data-aos="fade-up">
                     <div class="card">
                         <iframe width="100%"
                         src="https://www.youtube.com/embed/tgbNymZ7vqY">
@@ -121,27 +135,7 @@
                           <p class="card-text">Produknya sangat bagus dan nyaman di gunakan serta murah dan ramah lingkungan</p>
                         </div>
                       </div>
-                </div>
-                <div class="col-md-4 mb-3" data-aos="fade-up">
-                    <div class="card">
-                        <iframe width="100%"
-                        src="https://www.youtube.com/embed/tgbNymZ7vqY">
-                        </iframe>
-                        <div class="card-body">
-                          <p class="card-text">Produknya sangat bagus dan nyaman di gunakan serta murah dan ramah lingkungan</p>
-                        </div>
-                      </div>
-                </div>
-                <div class="col-md-4 mb-3" data-aos="fade-up">
-                    <div class="card">
-                        <iframe width="100%"
-                        src="https://www.youtube.com/embed/tgbNymZ7vqY">
-                        </iframe>
-                        <div class="card-body">
-                          <p class="card-text">Produknya sangat bagus dan nyaman di gunakan serta murah dan ramah lingkungan</p>
-                        </div>
-                      </div>
-                </div>
+                </div> -->
             </div>
         </div>
         
