--- a/review.html
+++ b/review.html
@@ -157,7 +157,7 @@
         <div class="row">
             <div class="col">
                 <p data-aos="fade-up"
-                data-aos-anchor-placement="bottom-bottom"> Created By <i class="bi bi-facebook"></i> <i class="bi bi-instagram"> </i><i class="bi bi-youtube"></i><a href="#">  IT FACIL STORE   </a></p> 
+                data-aos-anchor-placement="bottom-bottom"> Created By <i class="bi bi-facebook"></i> <i class="bi bi-instagram"> </i><a href="https://www.youtube.com/watch?v=vfA4dsF2gOY" target="_blank"><i class="bi bi-youtube"></i></a><a href="https://www.youtube.com/watch?v=vfA4dsF2gOY" target="_blank">  IT FACIL STORE   </a></p> 
                 <p data-aos="fade-up"
                 data-aos-anchor-placement="bottom-bottom">Mahasiswa Politekni Negeri Sriwijaya (POLSRI) Tahun 2021/2022</p>
                 <p data-aos="fade-up"
