--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 <!-- Isi -->
     <section class="jumbotron text-center">
         <img src="img/facil/brand1.png" alt="Brand Perusahaan" class="logo">
-        <h1 class="fw-bold">Facil Store</h1>
-        <p class="fw-bold">Perusahaan yang bergerak dibidang pembuatan kerajinan-kerajinan</p>
+        <h1 class="fw-bold faciljudul">Facil Store</h1>
+        <p class="fw-bold deskfacil"></p>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffff" fill-opacity="1" d="M0,256L48,229.3C96,203,192,149,288,149.3C384,149,480,203,576,213.3C672,224,768,192,864,181.3C960,171,1056,181,1152,197.3C1248,213,1344,235,1392,245.3L1440,256L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
     </section>
 
@@ -208,7 +208,7 @@
         <div class="row">
             <div class="col">
                 <p data-aos="fade-up"
-                data-aos-anchor-placement="bottom-bottom"> Created By <i class="bi bi-facebook"></i> <i class="bi bi-instagram"> </i><i class="bi bi-youtube"></i><a href="#">  IT FACIL STORE   </a></p> 
+                data-aos-anchor-placement="bottom-bottom"> Created By <i class="bi bi-facebook"></i> <i class="bi bi-instagram"> </i><a href="https://www.youtube.com/watch?v=vfA4dsF2gOY" target="_blank"><i class="bi bi-youtube"></i></a><a href="https://www.youtube.com/watch?v=vfA4dsF2gOY" target="_blank">  IT FACIL STORE   </a></p> 
                 <p data-aos="fade-up"
                 data-aos-anchor-placement="bottom-bottom">Mahasiswa Politekni Negeri Sriwijaya (POLSRI) Tahun 2021/2022</p>
                 <p data-aos="fade-up"
@@ -231,6 +231,15 @@
  
     <script src="bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/TextPlugin.min.js"></script>
+    <script>
+        gsap.registerPlugin(TextPlugin);
+        gsap.to('.deskfacil', {duration: 3, delay: 1.7, text: "Toko Online Tercepat, Teraman dan Terpercaya Serta Mudah Di Gunakan" })
+        gsap.from('.navbar', {duration: 1, y: -100, ease: 'bounce' })
+        gsap.from('.faciljudul', {duration: 2.5, x: -100, opacity: 0, ease: 'back', delay: 1.2})
+        gsap.from('.logo', {duration: 2.5, opacity: 0, rotateY: 360, ease: 'slow', delay: 1 })
+    </script>
     <script>
       AOS.init();
     </script>
