--- a/informasi.html
+++ b/informasi.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="style.css"> 
     <link rel="shorcut icon" href="img/brand.ico">
+    <style>
+        .logo:hover {
+            cursor: pointer;
+        }
+    </style>
 
     <title>E-Facil | POLSRI</title>
   </head>
@@ -18,7 +23,7 @@
 <!-- Awal Navbar -->
     <nav class="navbar navbar-expand-md navbar-dark bg-primary shadow-lg fixed-top">
     <div class="container">
-    <img src="img/facil/brand1.png" class="brand">   
+    <img src="img/facil/brand1.png" class="brand logo">   
         <a href="#" class="navbar-brand me-auto ms-2 fw-bold">  E-FACIL </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -82,6 +87,11 @@
                       </div>
                 </div>
             </div>
+            <div class="row d-none dataPemesanan">
+                <div class="col">
+                    <embed width="100%" height="500px" src="https://docs.google.com/spreadsheets/d/1ptVL5U9VWkZr2AMFBkOjlMmvTZBevkPnlF1nv63y24M/edit?usp=sharing">
+                </div>
+            </div>
         </div>
             
 
@@ -125,6 +135,22 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
+      </script>
+      <script>
+          const logo = document.querySelector('.logo');
+          const dataPemesanan = document.querySelector('.dataPemesanan');
+          logo.addEventListener('click', function(){
+              const cekPass = prompt("Masukan Password!!!");
+
+              if(cekPass === "adminfacil17") {
+                  alert("Login berhasil");
+                  alert("Selamat Datang Admin!!!");
+                  dataPemesanan.classList.remove('d-none');
+              } else {
+                  alert("Password Salah!!");
+                  alert("Gagal Masuk");
+              }
+          })
       </script>
 
     <!-- <script src="script.js"></script> -->
