perbaiki fitur admin

--- a/informasi.html
+++ b/informasi.html
@@ -112,7 +112,7 @@
                 <p data-aos="fade-up"
                 data-aos-anchor-placement="bottom-bottom"> Created By <i class="bi bi-facebook"></i> <i class="bi bi-instagram"> </i><a href="https://www.youtube.com/watch?v=vfA4dsF2gOY" target="_blank"><i class="bi bi-youtube"></i></a><a href="https://www.youtube.com/watch?v=vfA4dsF2gOY" target="_blank">  IT FACIL STORE   </a></p> 
                 <p data-aos="fade-up"
-                data-aos-anchor-placement="bottom-bottom">Mahasiswa Politekni Negeri Sriwijaya (POLSRI) Tahun 2021/2022</p>
+                data-aos-anchor-placement="bottom-bottom">Mahasiswa Politeknik Negeri Sriwijaya (POLSRI) Tahun 2021/2022</p>
                 <p data-aos="fade-up"
                 data-aos-anchor-placement="bottom-bottom">Jl. Kapten Anwar Sastro, Sungai Pangeran, Kec. Ilir Tim. I, Kota Palembang, Sumatera Selatan 30121</p>
             </div>
@@ -135,6 +135,7 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
+        alert("Sedikit info bahwa di Aplikasi ini tersedia menu Admin untuk mengelola data pesanan Cp Admin FS : 0823-7622-7823. Terimakasih");
       </script>
       <script>
           const logo = document.querySelector('.logo');
