--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
                 data-aos-offset="300"
                 data-aos-easing="ease-in-sine"
                 data-aos-duration="700">
-                    <p><b>Facil Group</b> merupakan perusahaan berjenis Home Industri yang saat menjual berbagai produk mulai dari alat-alat elektronik sampai kebutuhan rumah tangga dengan harga yang terjangkau. Perusahaan ini di dirikan pada tanggal 08 September 2021 dan di rintis oleh Mahasiswa Politeknik Negeri Sriwijaya. Perusahaan ini berlokasi di daerah perkantoran, tepatnya Jl. Kapten Anwar Sastro, Sungai Pangeran, Kecamatan Ilir Timur I, Palembang, Sumatera Selatan.</p>
+                    <p><b>Facil Group</b> merupakan perusahaan berjenis Home Industri yang saat ini menjual berbagai produk mulai dari alat-alat elektronik sampai kebutuhan rumah tangga dengan harga yang terjangkau. Perusahaan ini di dirikan pada tanggal 08 September 2021 dan di rintis oleh Mahasiswa Politeknik Negeri Sriwijaya. Perusahaan ini berlokasi di daerah perkantoran, tepatnya Jl. Kapten Anwar Sastro, Sungai Pangeran, Kecamatan Ilir Timur I, Palembang, Sumatera Selatan. Salah satu produk aplikasi penjualan Online dari Facil Group adalah <b>FACIL STORE</b>. Kata <em>Facil</em> sendiri di ambil dari Bahasa Spanish yang artinya <i>mudah</i> baik dari segi akses, pengiriman, penggunaan dan lain-lain.</i></p>
                 </div>
                 <div class="col-md-6" data-aos="fade-left"
                 data-aos-offset="300"
                 data-aos-easing="ease-in-sine"
                 data-aos-duration="900">
-                    <p>Website ini merupakan laman resmi dari Facil Group dimana para penjual dan pembeli dapat melakukan kegiatan Jual-Beli dengan aman dan terpercaya. Facil Group selalu berusaha untuk bisa memenuhi ekspetasi pengguna layanan ini, karena kenyamanan pengguna adalah prioritas kami. Facil Group secara resmi telah menjadi layanan platform jual-beli dan dipercaya oleh banyak kalangan baik dari orang dewasa maupun anak muda milenial pada masa sekarang ini.</p>
+                    <p>Website ini merupakan salah satu laman resmi web aplikasi penjualan dari Facil Group dimana para penjual dan pembeli dapat melakukan kegiatan Jual-Beli dengan aman dan terpercaya. Website kami selalu berusaha untuk bisa memenuhi kebutuhan pengguna, karena kenyamanan pengguna adalah prioritas kami. Facil Store secara resmi telah menjadi layanan platform jual-beli dan dipercaya oleh banyak kalangan baik dari orang dewasa maupun anak muda milenial pada saat ini.</p>
                 </div>
             </div>
         </div>
@@ -210,7 +210,7 @@
                 <p data-aos="fade-up"
                 data-aos-anchor-placement="bottom-bottom"> Created By <i class="bi bi-facebook"></i> <i class="bi bi-instagram"> </i><a href="https://www.youtube.com/watch?v=vfA4dsF2gOY" target="_blank"><i class="bi bi-youtube"></i></a><a href="https://www.youtube.com/watch?v=vfA4dsF2gOY" target="_blank">  IT FACIL STORE   </a></p> 
                 <p data-aos="fade-up"
-                data-aos-anchor-placement="bottom-bottom">Mahasiswa Politekni Negeri Sriwijaya (POLSRI) Tahun 2021/2022</p>
+                data-aos-anchor-placement="bottom-bottom">Mahasiswa Politeknik Negeri Sriwijaya (POLSRI) Tahun 2021/2022</p>
                 <p data-aos="fade-up"
                 data-aos-anchor-placement="bottom-bottom">Jl. Kapten Anwar Sastro, Sungai Pangeran, Kec. Ilir Tim. I, Kota Palembang, Sumatera Selatan 30121</p>
             </div>
