--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 data-aos-offset="300"
                 data-aos-easing="ease-in-sine"
                 data-aos-duration="900">
-                    <p>Website ini merupakan salah satu laman resmi web aplikasi penjualan dari Facil Group dimana para penjual dan pembeli dapat melakukan kegiatan Jual-Beli dengan aman dan terpercaya. Website kami selalu berusaha untuk bisa memenuhi kebutuhan pengguna, karena kenyamanan pengguna adalah prioritas kami. Facil Store secara resmi telah menjadi layanan platform jual-beli dan dipercaya oleh banyak kalangan baik dari orang dewasa maupun anak muda milenial pada saat ini.</p>
+                    <p><b>Facil Store</b> merupakan salah satu laman resmi web aplikasi penjualan dari Facil Group dimana para penjual dan pembeli dapat melakukan kegiatan Jual-Beli dengan aman dan terpercaya. Website kami selalu berusaha untuk bisa memenuhi kebutuhan pengguna, karena kenyamanan pengguna adalah prioritas kami. Facil Store secara resmi telah menjadi layanan platform jual-beli dan dipercaya oleh banyak kalangan baik dari orang dewasa maupun anak muda milenial pada saat ini. Aplikasi ini nantinya akan selalu dikembangkan dan diupdate sesuai dengan kebutuhan saat ini yang akan dilengkapi dengan fitur-fitur yang lebih sederhana dan mudah untuk di pahami. Facil Store Teraman, Terpercaya, Termudah, Tercepat dan Terupdate.</p>
                 </div>
             </div>
         </div>
