perbaiki fix body

--- a/index.html
+++ b/index.html
@@ -15,31 +15,32 @@
 
     <title>E-Facil | POLSRI</title>
   </head>
-  <body>
+  <body style="overflow-x:hidden;">
 <!-- Awal Navbar -->
     <nav class="navbar navbar-expand-md navbar-dark bg-primary shadow-lg fixed-top">
-    <div class="container">
-    <img src="img/facil/brand1.png" class="brand">   
-        <a href="#" class="navbar-brand me-auto ms-2 fw-bold">  E-FACIL </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarScroll">
-        <ul class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll fw-bold">
-            <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html"><i class="bi bi-house-fill"></i> Home</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="informasi.html"><i class="bi bi-book-half"></i>  Informasi</a>
-            </li>   
-            <li class="nav-item">
-            <a class="nav-link" href="review.html" tabindex="-1" aria-disabled="true"> <i class="bi bi-stopwatch-fill"></i>   Review Produk</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="about.html" tabindex="-1" aria-disabled="true"> <i class="bi bi-info-circle-fill"></i> About</a>
-            </li>
-        </ul>
-    </div>
+        <div class="container">
+            <img src="img/facil/brand1.png" class="brand">   
+            <a href="#" class="navbar-brand me-auto ms-2 fw-bold">  E-FACIL </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarScroll">
+                <ul class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll fw-bold">
+                    <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html"><i class="bi bi-house-fill"></i> Home</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="informasi.html"><i class="bi bi-book-half"></i>  Informasi</a>
+                    </li>   
+                    <li class="nav-item">
+                    <a class="nav-link" href="review.html" tabindex="-1" aria-disabled="true"> <i class="bi bi-stopwatch-fill"></i>   Review Produk</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="about.html" tabindex="-1" aria-disabled="true"> <i class="bi bi-info-circle-fill"></i> About</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
 <!-- Akhir Navbar -->
 
@@ -53,14 +54,14 @@
 
     <section class="about">
         <div class="container text-center">
-            <div class="row text-center">
+            <div class="row">
                 <div class="col mb-3">
                     <h2 class="fw-bold" data-aos="fade-down"
                     data-aos-easing="linear"
                     data-aos-duration="800"><em>History of Facil Group</em></h2>
                 </div>
             </div>
-            <div class="row text-center">
+            <div class="row">
                 <div class="col-md-6" data-aos="fade-right"
                 data-aos-offset="300"
                 data-aos-easing="ease-in-sine"
@@ -212,7 +213,7 @@
                 <p data-aos="fade-up"
                 data-aos-anchor-placement="bottom-bottom">Mahasiswa Politeknik Negeri Sriwijaya (POLSRI) Tahun 2021/2022</p>
                 <p data-aos="fade-up"
-                data-aos-anchor-placement="bottom-bottom">Jl. Kapten Anwar Sastro, Sungai Pangeran, Kec. Ilir Tim. I, Kota Palembang, Sumatera Selatan 30121</p>
+                data-aos-anchor-placement="bottom-bottom">Jl. Kapten Anwar Sastro, Sungai Pangeran, Kec. Ilir Timur I, Kota Palembang, Sumatera Selatan 30121</p>
             </div>
         </div>
     </div>
