--- a/about.html
+++ b/about.html
@@ -171,7 +171,7 @@
                 <p data-aos="fade-up"
                 data-aos-anchor-placement="bottom-bottom">Mahasiswa Politeknik Negeri Sriwijaya (POLSRI) Tahun 2021/2022</p>
                 <p data-aos="fade-up"
-                data-aos-anchor-placement="bottom-bottom">Jl. Kapten Anwar Sastro, Sungai Pangeran, Kec. Ilir Tim. I, Kota Palembang, Sumatera Selatan 30121</p>
+                data-aos-anchor-placement="bottom-bottom">Jl. Kapten Anwar Sastro, Sungai Pangeran, Kec. Ilir Timur I, Kota Palembang, Sumatera Selatan 30121</p>
                 <p data-aos="fade-up"
                 data-aos-anchor-placement="bottom-bottom"><i class="bi bi-info-circle-fill text-danger "></i>   Jika Aplikasi Kurang Merespon Beralih Ke Websitenya <a href="https://irpansyah2m1d.github.io/E-Facil.github.io/" target="_blank">Facil Store</a></p>
             </div>
