--- a/review.html
+++ b/review.html
@@ -161,7 +161,7 @@
                 <p data-aos="fade-up"
                 data-aos-anchor-placement="bottom-bottom">Mahasiswa Politeknik Negeri Sriwijaya (POLSRI) Tahun 2021/2022</p>
                 <p data-aos="fade-up"
-                data-aos-anchor-placement="bottom-bottom">Jl. Kapten Anwar Sastro, Sungai Pangeran, Kec. Ilir Tim. I, Kota Palembang, Sumatera Selatan 30121</p>
+                data-aos-anchor-placement="bottom-bottom">Jl. Kapten Anwar Sastro, Sungai Pangeran, Kec. Ilir Timur I, Kota Palembang, Sumatera Selatan 30121</p>
             </div>
         </div>
     </div>
